--- a/crmapp/src/main/resources/application.properties
+++ b/crmapp/src/main/resources/application.properties
@@ -1,16 +1,20 @@
 server.port=9000
 server.context-path=/crmapp
 
-#MySQL
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.continue-on-error=true
+
+# MySQL
 app.datasource.url=jdbc:mysql://localhost:3306/crmapp?autoReconnect=true&useSSL=false
 app.datasource.username=root
 app.datasource.password=rfhmthbcn
 app.datasource.driver-class-name=com.mysql.jdbc.Driver
 app.datasource.pool-size=30
+app.hibernate.database-platform=mysql
 app.hibernate.show_sql=true
 app.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
-#PostgreSQL
+## PostgreSQL
 #app.datasource.url=jdbc:postgresql://localhost:5432/crmapp
 #app.datasource.username=admin
 #app.datasource.password=admin
