--- a/crmapp/src/main/resources/application.properties
+++ b/crmapp/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 server.port=9000
 server.context-path=/crmapp
 
+spring.data.rest.base-path=/restapi
+
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.continue-on-error=true
 
