--- a/crmapp/frontend/package.json
+++ b/crmapp/frontend/package.json
@@ -5,7 +5,10 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build -prod",
+    "postbuild": "npm run deploy",
+    "predeploy": "rimraf ../src/main/resources/static && mkdirp ../src/main/resources/static",
+    "deploy": "copyfiles -f dist/** ../src/main/resources/static",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -21,7 +24,9 @@
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
+    "angular2-flash-messages": "^1.0.8",
     "core-js": "^2.4.1",
+    "font-awesome": "^4.7.0",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
   },
