added link on Google Cloud Mysql DB

--- a/crmapp/src/main/resources/application.properties
+++ b/crmapp/src/main/resources/application.properties
@@ -6,8 +6,12 @@ spring.data.rest.base-path=/restapi
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.continue-on-error=true
 
-# MySQL
+# MySQL (Local)
 app.datasource.url=jdbc:mysql://localhost:3306/crmapp?autoReconnect=true&useSSL=false
+
+# MySQL (Google Cloud)
+#app.datasource.url=jdbc:mysql://35.198.90.238:3306/crmapp
+
 app.datasource.username=root
 app.datasource.password=rfhmthbcn
 app.datasource.driver-class-name=com.mysql.jdbc.Driver
