--- a/crmapp/frontend/package.json
+++ b/crmapp/frontend/package.json
@@ -29,7 +29,9 @@
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "rxjs": "^5.4.2",
-    "zone.js": "^0.8.14"
+    "zone.js": "^0.8.14",
+    "primeng": "^5.0.2",
+    "font-awesome": "^4.7.0"
   },
   "devDependencies": {
     "@angular/cli": "1.4.0",
