--- a/crmapp/frontend/package.json
+++ b/crmapp/frontend/package.json
@@ -26,7 +26,7 @@
     "@angular/router": "^5.2.1",
     "core-js": "^2.5.3",
     "font-awesome": "^4.7.0",
-    "primeng": "^5.2.0-rc.2",
+    "primeng": "^5.2.0",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.20"
   },
