properties added for h2 base

--- a/crmapp/src/main/resources/application.properties
+++ b/crmapp/src/main/resources/application.properties
@@ -6,6 +6,18 @@ spring.data.rest.base-path=/restapi
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.continue-on-error=true
 
+# H2
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2
+
+# Datasource
+#spring.datasource.url = jdbc:h2:mem:testdb
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.datasource.driver-class-name=org.h2.Driver
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#app.hibernate.dialect=org.hibernate.dialect.H2Dialect
+
 # MySQL (Local)
 app.datasource.url=jdbc:mysql://localhost:3306/crmapp?autoReconnect=true&useSSL=false
 
@@ -27,5 +39,3 @@ app.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 #app.datasource.driver-class-name=org.postgresql.Driver
 #app.hibernate.show_sql = true
 #app.hibernate.dialect = org...
-
-
