--- a/crmapp/pom.xml
+++ b/crmapp/pom.xml
@@ -9,7 +9,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.5.8.RELEASE</version>
+		<version>1.5.10.RELEASE</version>
 	</parent>
 	
 	<dependencies>
@@ -66,7 +66,6 @@
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
-			<version>1.4.195</version>
 			<scope>test</scope>
 		</dependency>
 
@@ -75,6 +74,7 @@
 	<properties>
 		<java.version>1.8</java.version>
 		<dbcp2.version>2.1.1</dbcp2.version>
+		<h2.version>1.4.195</h2.version>
 	</properties>
 	
 </project>
