--- a/crmapp/pom.xml
+++ b/crmapp/pom.xml
@@ -68,6 +68,11 @@
 			<artifactId>h2</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>${lang3.version}</version>
+		</dependency>
 
 	</dependencies>
 	
@@ -75,6 +80,7 @@
 		<java.version>1.8</java.version>
 		<dbcp2.version>2.1.1</dbcp2.version>
 		<h2.version>1.4.195</h2.version>
+		<lang3.version>3.7</lang3.version>
 	</properties>
 	
 </project>
