--- a/crmapp/frontend/package.json
+++ b/crmapp/frontend/package.json
@@ -36,8 +36,10 @@
     "jquery": "^3.3.1",
     "npm": "^5.8.0",
     "popper.js": "^1.12.9",
-    "primeng": "^5.2.4",
+    "primeng": "^5.2.5",
     "rxjs": "^5.5.6",
+    "to": "^0.2.9",
+    "update": "^0.7.4",
     "zone.js": "^0.8.20"
   },
   "devDependencies": {
