BE: initialization mode added for script

--- a/crmapp/src/main/resources/application.properties
+++ b/crmapp/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.data.rest.base-path=/restapi
 
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.continue-on-error=true
+spring.datasource.initialization-mode=always
 
 # H2
 #spring.h2.console.enabled=true
