--- a/crmapp/frontend/package.json
+++ b/crmapp/frontend/package.json
@@ -21,46 +21,46 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.2.6",
-    "@angular/common": "^5.2.6",
-    "@angular/compiler": "^5.2.6",
-    "@angular/core": "^5.2.6",
-    "@angular/forms": "^5.2.6",
-    "@angular/http": "^5.2.6",
-    "@angular/platform-browser": "^5.2.6",
-    "@angular/platform-browser-dynamic": "^5.2.6",
-    "@angular/router": "^5.2.6",
-    "bootstrap": "^4.0.0",
-    "core-js": "^2.5.3",
+    "@angular/animations": "6.0.9",
+    "@angular/common": "6.0.9",
+    "@angular/compiler": "6.0.9",
+    "@angular/core": "6.0.9",
+    "@angular/forms": "6.0.9",
+    "@angular/http": "6.0.9",
+    "@angular/platform-browser": "6.0.9",
+    "@angular/platform-browser-dynamic": "6.0.9",
+    "@angular/router": "6.0.9",
+    "bootstrap": "^4.1.2",
+    "core-js": "^2.5.7",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
-    "npm": "^5.8.0",
-    "popper.js": "^1.12.9",
-    "primeng": "^5.2.6",
-    "rxjs": "^5.5.6",
+    "npm": "^6.2.0",
+    "popper.js": "^1.14.3",
+    "primeng": "6.0.1",
+    "rxjs": "^6.2.2",
     "to": "^0.2.9",
     "update": "^0.7.4",
-    "zone.js": "^0.8.20"
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "^1.7.1",
-    "@angular/compiler-cli": "^5.2.6",
-    "@angular/language-service": "^5.2.6",
-    "@types/jasmine": "~2.8.6",
+    "@angular/cli": "6.0.8",
+    "@angular/compiler-cli": "6.0.9",
+    "@angular/language-service": "6.0.9",
+    "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~9.4.2",
-    "codelyzer": "~4.1.0",
-    "jasmine-core": "~2.99.1",
+    "@types/node": "~10.5.2",
+    "codelyzer": "~4.4.2",
+    "jasmine-core": "~3.1.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~2.0.0",
+    "karma": "~2.0.4",
     "karma-chrome-launcher": "~2.2.0",
     "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.4.1",
-    "karma-jasmine": "~1.1.1",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.3.0",
-    "ts-node": "~4.1.0",
-    "tslint": "~5.9.1",
+    "karma-coverage-istanbul-reporter": "^2.0.1",
+    "karma-jasmine": "~1.1.2",
+    "karma-jasmine-html-reporter": "^1.2.0",
+    "protractor": "~5.4.0",
+    "ts-node": "~7.0.0",
+    "tslint": "~5.11.0",
     "typescript": "^2.6.2"
   }
 }
