--- a/crmapp/frontend/package.json
+++ b/crmapp/frontend/package.json
@@ -36,6 +36,7 @@
     "jquery": "^3.3.1",
     "npm": "^6.2.0",
     "popper.js": "^1.14.3",
+    "primeicons": "^1.0.0-beta.10",
     "primeng": "6.0.1",
     "rxjs": "^6.2.2",
     "to": "^0.2.9",
@@ -43,7 +44,8 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "6.0.8",
+    "@angular-devkit/build-angular": "~0.6.8",
+    "@angular/cli": "^6.0.8",
     "@angular/compiler-cli": "6.0.9",
     "@angular/language-service": "6.0.9",
     "@types/jasmine": "~2.8.8",
@@ -61,6 +63,6 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "^2.6.2"
+    "typescript": "^2.7.2"
   }
 }
