--- a/crmapp/frontend/package.json
+++ b/crmapp/frontend/package.json
@@ -37,7 +37,7 @@
     "npm": "^6.2.0",
     "popper.js": "^1.14.3",
     "primeicons": "^1.0.0-beta.10",
-    "primeng": "6.0.1",
+    "primeng": "^6.1.2",
     "rxjs": "^6.2.2",
     "to": "^0.2.9",
     "update": "^0.7.4",
