--- a/crmapp/src/main/resources/application.properties
+++ b/crmapp/src/main/resources/application.properties
@@ -26,7 +26,7 @@ app.datasource.url=jdbc:mysql://localhost:3306/crmapp?autoReconnect=true&useSSL=
 #app.datasource.url=jdbc:mysql://35.198.90.238:3306/crmapp
 
 app.datasource.username=root
-app.datasource.password=rfhmthbcn
+app.datasource.password=
 app.datasource.driver-class-name=com.mysql.jdbc.Driver
 app.datasource.pool-size=30
 app.hibernate.database-platform=mysql
