--- a/crmapp/src/main/resources/application.properties
+++ b/crmapp/src/main/resources/application.properties
@@ -4,8 +4,11 @@ server.context-path=/
 spring.data.rest.base-path=/restapi
 
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.MySQL57InnoDBDialect
 spring.datasource.continue-on-error=true
 spring.datasource.initialization-mode=always
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL57InnoDBDialect
+hibernate.dialect.storage_engine=innodb
 
 # H2
 #spring.h2.console.enabled=true
@@ -27,11 +30,12 @@ app.datasource.url=jdbc:mysql://localhost:3306/crmapp?autoReconnect=true&useSSL=
 
 app.datasource.username=root
 app.datasource.password=
-app.datasource.driver-class-name=com.mysql.jdbc.Driver
+app.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 app.datasource.pool-size=30
 app.hibernate.database-platform=mysql
 app.hibernate.show_sql=true
-app.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+app.hibernate.dialect=org.hibernate.dialect.MySQL57InnoDBDialect
+app.hibernate.dialect.storage_engine=innodb
 
 ## PostgreSQL
 #app.datasource.url=jdbc:postgresql://localhost:5432/crmapp
