--- a/crmapp/pom.xml
+++ b/crmapp/pom.xml
@@ -12,6 +12,7 @@
 		<h2.version>1.4.195</h2.version>
 		<lang3.version>3.7</lang3.version>
 		<mysql.conn.version>8.0.13</mysql.conn.version>
+		<lombok.version>1.18.4</lombok.version>
 	</properties>
 	
 	<parent>
@@ -60,16 +61,17 @@
 	  		<artifactId>spring-boot-starter-data-jpa</artifactId>
 	  	</dependency>
 	  	<dependency>
-	  		<groupId>org.springframework.boot</groupId>
-	  		<artifactId>spring-boot-starter-data-rest</artifactId>
-	  	</dependency>
-	  	<dependency>
 	  		<groupId>org.postgresql</groupId>
 	  		<artifactId>postgresql</artifactId>
 	  	</dependency>
 	  	<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-dbcp2</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>${lombok.version}</version>
 		</dependency>
 		<!-- H2 Database -->
 		<dependency>
