entities modification (using lombok), moved abstract agreement

--- a/crmapp/src/main/resources/application.properties
+++ b/crmapp/src/main/resources/application.properties
@@ -1,11 +1,12 @@
 server.port=9000
 server.context-path=/
 
-spring.data.rest.base-path=/restapi
-
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.continue-on-error=true
 spring.datasource.initialization-mode=always
+
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 # H2
 #spring.h2.console.enabled=true
