--- a/crmapp/src/main/resources/application.properties
+++ b/crmapp/src/main/resources/application.properties
@@ -27,7 +27,7 @@ app.datasource.url=jdbc:mysql://localhost:3306/crmapp?autoReconnect=true&useSSL=
 #app.datasource.url=jdbc:mysql://35.198.90.238:3306/crmapp
 
 app.datasource.username=root
-app.datasource.password=
+app.datasource.password=root
 app.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 app.datasource.pool-size=30
 app.hibernate.database-platform=mysql
